# CxxSmallVec

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  conanfile.py
include/CxxSmallVec/: small_vector.h
scripts/: build.sh
src/common/: logger.h  timer.h
src/components/: small_vector.cpp
tests/: test_char.cpp
